# actions

./: .flake8  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: checks.yml
myproject/: manage.py
myproject/myproject/: settings.py
