[tool.poetry]
name = "actions"
version = "0.1.0"
description = ""
authors = ["ulurn-av <ulurn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.1.0"
flake8 = "^7.1.0"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 160
exclude = ["migrations/*","manage.py","*/settings.py"]